<resources>
    <string name="app_name">ClimateControlTerminal</string>
    <string name="StatusNotYetConnected">Noy yet connected</string>
    <string name="StatusConnected">Connected</string>
    <string name="StatusDeviceNotFound">Device not found</string>
    <string name="StatusReadError">Read error</string>
    <string name="StatusWriteError">Write error</string>
    <string name="StatusPermissionDenied">Permission denied</string>
    <string name="device_status">Device status</string>
    <string name="tempPlus">Temp +</string>
    <string name="dual">Dual</string>
    <string name="tempMinus">Temp -</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="recirc_fresh">Recirc/Fresh</string>
    <string name="auto">Auto</string>
    <string name="mode">Mode</string>
    <string name="ac">AC</string>
    <string name="fanMinus">Fan-</string>
    <string name="fanPlus">Fan+</string>
    <string name="off">OFF</string>
    <string name="lcd_view">LCD view</string>
</resources>
